--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,5 +1,19 @@
-<p>
+<!--p>
   {{currentQuote | json}}
   <button (click)="getNewQuote('movies')">New Movie Quote</button>
   <button (click)="getNewQuote('famous')">New Famous Quote</button>
-</p>
+</p-->
+
+<div class="quote-container">
+  <div class="quote-card">
+    <button class="quote-refresh" (click)="getNewQuote()">
+      <span class="fa fa-refresh"></span>
+    </button>
+    <div class="quote" *ngIf="currentQuote">
+      {{ currentQuote.quote }}
+    </div>
+    <div class="quote-author" *ngIf="currentQuote">
+      - {{ currentQuote.author }}
+    </div>
+  </div>
+</div>
